objects/ProductSchedule__c.object
<CustomObject>
    <fields>
        <fullName>Grid_Actual_Amount__c</fullName>
        <formula>Grid_SalesPric__c  *  Grid_Actual_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_Actual_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_ContractLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line</label>
        <referenceTo>vlocity_cmt__ContractLineItem__c</referenceTo>
        <relationshipLabel>Product Schedules</relationshipLabel>
        <relationshipName>Product_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_Delivery_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Plan</label>
        <referenceTo>DeliveryPlan__c</referenceTo>
        <relationshipLabel>Product Schedules</relationshipLabel>
        <relationshipName>Product_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_OrderSort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Grid_OrderSort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_PlannedAmn__c</fullName>
        <formula>Grid_PlannedQuantity__c  *   Grid_SalesPric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_PlannedAmount__c</fullName>
        <label>Planned Amount2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_PlannedQuantity__c</fullName>
        <label>Planned Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_QuoteLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Product Schedules</relationshipLabel>
        <relationshipName>Product_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_SalesPric__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_SalesPrice__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Grid_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Grid_QuoteLineItem__c</columns>
        <columns>Grid_PlannedAmount__c</columns>
        <columns>Grid_PlannedQuantity__c</columns>
        <columns>Grid_SalesPrice__c</columns>
        <columns>Grid_StartDate__c</columns>
        <columns>Grid_EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>